# ScopeMArchiver

./: .companion.env  .compose.env  .dev.env  .development.env  .env  .env.development  .env.prod  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .prod.env  .production.env  .test.env  404.html  README.md  archival_flow.drawio  archiver-service.docker-compose.yml  auth.drawio  config.toml  deployment_detailed.drawio  docker-compose-development.yml  docker-compose.yml  docs.Dockerfile  index.html  infra.docker-compose.yml  jobs.docker-compose.yml  minio.docker-compose.yml  mkdocs.yml  monitoring.docker-compose.yml  objects.inv  prefect-jobtemplate-dev.json  prefect-jobtemplate-prod.json  prefect-runtime.Dockerfile  prefect-worker.docker-compose.yml  prefect.yaml  prometheus.yml  sitemap.xml  traefik.docker-compose.yml  upload.drawio  web.Dockerfile  (+1 more)
backend/api/: .dockerignore  .flake8  .openapi-generator-ignore  Dockerfile  Pipfile  README.md  __init__.py  __main__.py  api.py  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt  router.py
backend/api/.openapi-generator/: FILES
backend/api/app/: Dockerfile  Pipfile  README.md  openapi.yaml
backend/api/app/src/openapi_server/: __main__.py  settings.py
backend/api/src/openapi_server/: __main__.py  security_api.py  settings.py
backend/api/src/openapi_server/apis/: archiving_api.py  archiving_api_base.py  health_api.py  health_api_base.py  presigned_urls_api.py  presigned_urls_api_base.py  s3upload_api.py  s3upload_api_base.py  service_token_api.py  service_token_api_base.py
backend/api/src/openapi_server/impl/: archiving.py  archiving_api_impl.py  archving_api_impl.py  finalize_upload_impl.py  health_impl.py  presigned_url_impl.py  s3.py  s3upload_impl.py  scicat.py  service_token_impl.py
backend/api/src/openapi_server/models/: abort_upload_body.py  (+27 more)
backend/api/tests/: config  conftest.py  test_archiving_api.py  test_presigned_urls_api.py  test_s3_impl.py  test_s3upload_api.py  test_service_token_api.py  test_urls.py  utils.py
backend/archiver/: Pipfile  api.py  archiving_flow.py  config.py  datablocks.py  deploy.py  logging.py  model.py  prefect-runtime.Dockerfile  pyproject.toml  readMe.md  scicat_interface.py  scicat_tasks.py  tasks.py  working_storage_interface.py
backend/archiver/archiver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/archiver/config/: __main__.py  blocks.py  concurrency_limits.py  variables.py
backend/archiver/flows/: __main__.py  archive_datasets_flow.py  archiving_flow.py  flow_utils.py  mock_flows.py  retrieval_flow.py  retrieve_datasets_flow.py  task_utils.py  test_flows.py  utils.py
backend/archiver/flows/tests/: conftest.py  helpers.py  scicat_unittest_mock.py  test_archival_flow.py  test_retrieval_flow.py
backend/archiver/scicat/: scicat_interface.py  scicat_tasks.py
backend/archiver/tests/: conftest.py  pytest.ini  scicat_api_mock.py  scicat_mock.py  scicat_service_mock.py  scicat_unittest_mock.py  test_archival_flow.py  test_archiving.py  test_datablocks.py  test_e2e.py  test_retrieval_flow.py  test_scicat_interface.py  test_scicat_tasks.py  test_tasks.py
backend/archiver/utils/: datablocks.py  log.py  model.py  s3_storage_interface.py  script_generation.py  working_storage_interface.py
backend/archiver/utils/tests/: test_datablocks.py  test_s3.py
(+210 files in other folders)
