[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archiver-service"
version = "0.2.0"
description = "REST API endpoint provider for presigned S3 upload and archiving workflow scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "boto3",
    "mypy",
    "prefect==3.1.4",
    "pyjwt",
    "tool>=0.8.0",
    "black>=24.10.0",
]

[tool.uv]
dev-dependencies = [ "flake8", "autopep8", "pytest",]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]

[dependency-groups]
lint = [
    "ruff>=0.9.2",
]
