[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archiver-service-api"
version = "0.2.0"
description = "REST API endpoint provider for presigned S3 upload and archiving workflow scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.36.6",
    "fastapi[standard]>=0.115.7",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "importlib-metadata>=8.5.0",
    "prefect==3.4.20",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "./src/openapi_server/apis/",
    "./src/openapi_server/models/",
    "./src/openapi_server/tests/",
    "./tests/",
]
line-length = 110
indent-width = 4

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]

[dependency-groups]
lint = [
    "ruff>=0.9.3",
    "mypy>=1.14.1",
]
dev = [
    "requests-mock>=1.12.1",
]
