[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "archiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.23",
    "moto[s3]>=5.0.28",
    "prefect==3.1.11",
    "prefect-docker>=0.6.2",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "requests-mock>=1.12.1",
    "strenum>=0.4.15",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 110
indent-width = 4

[dependency-groups]
dev = [
    "moto[s3]>=5.0.28",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "requests-mock>=1.12.1",
]
lint = [
    "mypy>=1.15.0",
    "ruff>=0.9.6",
]
